removed some stuff... modified order apis/ added missing routes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DB_URI=
-PORT=
-JWT_SECRET_KEY=
+DB_URI="mongodb+srv://admin:jzsMDG5kZdkqVpgk@cluster0.35dheac.mongodb.net/test"
+PORT="5001"
+JWT_SECRET_KEY="cwoffee_boiiiiiiiiiiiiiiiii"
